{{$NEXT}}
          - Made a much better split between list and iterator capabilities
          - Add compare overload
          - Fix end method to return a valid value
          - Fix erase to actually be usable
          - Revert "Made size() O(1) instead of O(N)"

0.003     2011-01-25 15:38:59 Europe/Amsterdam
          Made size() O(1) instead of O(N)

0.002     2011-01-17 02:49:24 Europe/Amsterdam
          Depend on namespace::clean 0.20 to avoid bugs.

0.001     2011-01-15 01:56:26 Europe/Amsterdam
          Initial release