@@ -3,6 +3,7 @@
           - Add compare overload
           - Fix end method to return a valid value
           - Fix erase to actually be usable
+          - Make pop/shift throw an exception on failure
           - Revert "Made size() O(1) instead of O(N)"
 
 0.003     2011-01-25 15:38:59 Europe/Amsterdam
